<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:padding="16dp"
    android:background="@color/background_color">

    <!-- Agregar ImageView para el logo -->
    <ImageView
        android:id="@+id/logoFarmacia"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo_farmacia"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:scaleType="fitCenter"/>

    <!-- Campo para Correo Electrónico -->
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/login_email_hint"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:background="@drawable/custom_edittext_background"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoFarmacia"
        android:layout_marginTop="16dp"/>

    <!-- Campo para Contraseña -->
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:padding="12dp"
        android:background="@drawable/custom_edittext_background"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        android:layout_marginTop="16dp"/>

    <!-- Botón de Iniciar Sesión -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_button_text"
        android:backgroundTint="@color/button_color"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        android:layout_marginTop="24dp"/>

    <!-- Botón de Registro -->
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register_button_text"
        android:backgroundTint="@android:color/transparent"
        android:textColor="@color/button_color"
        android:textSize="16sp"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
