<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:background="?android:attr/selectableItemBackground">

    <!-- TextView para el nombre del medicamento -->
    <TextView
        android:id="@+id/tvNombreMedicamento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nombre_medicamento"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvPrecio"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"/>

    <!-- TextView para el precio del medicamento -->
    <TextView
        android:id="@+id/tvPrecio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/precio_inicial"
        android:textSize="16sp"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toStartOf="@+id/btnAgregar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="16dp"/>

    <!-- Botón para agregar el medicamento -->
    <Button
        android:id="@+id/btnAgregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agregar"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/button_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
