<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/background_color"
    tools:context=".ConfirmarPedidoActivity">

    <!-- Lista de medicamentos -->
    <TextView
        android:id="@+id/tvListaMedicamentos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Medicamentos:\n"
        android:padding="16dp"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvTotal"/>

    <!-- Total de medicamentos -->
    <TextView
        android:id="@+id/tvDetallesMedicamento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvTotal"/>

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medicamentos_total"
        android:textSize="20sp"
        android:textColor="@color/text_highlight"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvListaMedicamentos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"/>

    <Button
        android:id="@+id/btnRegresar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/regresar"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/button_secondary"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/tvTotal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>

    <Button
        android:id="@+id/btnConfirmar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirmar_pedido"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/button_primary"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/btnRegresar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
